# hotdog-bot

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
hotdogbot/: client.py  config.py  currency.py  db.py  main.py  units.py
hotdogbot/migrations/: 001-initial.sql  schema.sql
